@@ -182,7 +182,7 @@ sub _process_element {
         return $self->_process_switch($node, $environment, $sigil, $quant, $tail);
     } elsif ($sigil eq '/') {
         return $self->_process_structure_comment($node, $environment, $sigil, $quant, $tail);
-    } elsif ($sigil eq '.') {
+    } elsif ($sigil ~~ ['.', ',']) {
         return $self->_process_include($node, $environment, $sigil, $quant, $tail);
     } elsif ($sigil eq ':') {
         return $self->_process_wrap($node, $environment, $sigil, $quant, $tail);
@@ -293,21 +293,42 @@ sub _process_include {
 
     my @contents = ();
 
-    my $filename = Positron::Expression::evaluate($tail, $environment);
-    my $filepath = undef;
-    foreach my $include_path (@{$self->{'include_paths'}}) {
-        if (-r $include_path . $filename) {
-            $filepath = $include_path . $filename;
+    if ($sigil eq '.') {
+        # from file
+        my $filename = Positron::Expression::evaluate($tail, $environment);
+        my $filepath = undef;
+        foreach my $include_path (@{$self->{'include_paths'}}) {
+            if (-r $include_path . $filename) {
+                $filepath = $include_path . $filename;
+            }
+        }
+        if (not defined $filepath) {
+            croak "Could not find $filename (from $tail) for inclusion";
+        }
+
+
+        # automatically die if we can't read this
+        @contents = $handler->parse_file($filepath);
+        @contents = map { $self->_process_element($_, $environment) } @contents;
+    } else {
+        # from env
+        my $env_contents = Positron::Expression::evaluate($tail, $environment);
+        if ($env_contents) {
+            if (ref($env_contents) eq 'ARRAY') {
+                # special case: can't allow ['a', 'text'], must be [['a', 'text']], sorry
+                if ($handler->isa('Positron::Handler::ArrayRef') and not ref($env_contents->[0])) {
+                    @contents = ($env_contents);
+                } else {
+                    @contents = @$env_contents;
+                }
+            } else {
+                @contents = ($env_contents);
+            }
+        } else {
+            # warn?
+            @contents = ();
         }
     }
-    if (not defined $filepath) {
-        croak "Could not find $filename (from $tail) for inclusion";
-    }
-
-
-    # automatically die if we can't read this
-    @contents = $handler->parse_file($filepath);
-    @contents = map { $self->_process_element($_, $environment) } @contents;
 
     my $keep = ($quant eq '+');
     return ($keep) ? ($self->_clone_and_resolve($node, $environment, @contents)) : @contents;
@@ -332,6 +353,7 @@ sub _process_wrap {
             croak "Could not find $filename (from $tail) for wrapping";
         }
 
+        # TODO: resolve later? We'd need to clone $node and remove structure sigils to defeat recursion
         # Resolve now; also allows clone_and_resolve to clear sigils to defeat recursion
         @contents = map { $self->_process_element($_, $environment) } $handler->list_contents($node);
         # only quant-less versions pass the parent
